# zydis-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  azure-pipelines.yml  build.rs  rustfmt.toml  server.py  test.html  update_enums.sh  validate-structs.py
.github/workflows/: main.yml
examples/: decoded_to_encoder_req.rs  encode_macro.rs  encode_manually.rs  experiment.rs  formatter_hooks.rs  formatter_symbols.rs  instruction_segments.rs  pattern.rs  sample1.rs  simple.rs  tokens.rs
src/: ZycoreExportConfig.h  bindings.c  decoder.rs  encoder.rs  enums.rs  ffi.rs  formatter.rs  gen.rs  lib.rs  mnemonic.rs  register.rs  status.rs  utils.rs
src/enums/: generated.rs  instructioncategory.rs  isaext.rs  isaset.rs  mnemonic.rs  mod.rs  register.rs
src/ffi/: decoder.rs  encoder.rs  formatter.rs  misc.rs  utils.rs  zycore.rs
