[package]
name        = "zydis"
version     = "3.0.0"
authors     = [
    "Joel Höner <joel@zyantific.com>",
    "Timo von Hartz <th0rex@zyantific.com>"
]

description = "Bindings for Zydis"
license     = "MIT"
keywords    = ["disassembler", "x86", "amd64", "decoder"]
repository  = "https://github.com/zyantific/zydis-rs/"
edition     = "2018"

[build-dependencies]
cmake = "0.1"

[dependencies]
bitflags = "1.0"
serde = { version = "1.0", optional = true}
serde_derive = { version = "1.0", optional = true}

[features]
default = []
minimal = []
serialization = ["serde", "serde_derive"]
