[package]
name = "zydis"
version = "4.0.0"
authors = ["Joel Höner <joel@zyantific.com>", "Timo von Hartz <th0rex@zyantific.com>"]
description = "Bindings for Zydis"
license = "MIT"
keywords = ["disassembler", "x86", "amd64", "decoder"]
repository = "https://github.com/zyantific/zydis-rs/"
edition = "2021"

[build-dependencies]
cmake = "0.1"

[dependencies]
bitflags = "2"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
minimal = []
serialization = ["serde", "bitflags/serde"]
nolibc = []
wasm = ["nolibc"]
