[package]
name = "zydis"
version = "4.1.1"
authors = ["Joel Höner <joel@zyantific.com>", "Timo von Hartz <th0rex@zyantific.com>"]
description = "Bindings for Zydis"
license = "MIT"
keywords = ["disassembler", "x86", "amd64", "decoder"]
repository = "https://github.com/zyantific/zydis-rs/"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
cmake = "0.1"

[dev-dependencies]
argh = "0.1"

[dependencies]
bitflags = "2"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["std", "full-decoder", "formatter"]
alloc = []
std = ["alloc"]
full-decoder = []
formatter = ["alloc", "full-decoder"]
encoder = ["alloc", "full-decoder"]
serialization = ["serde", "bitflags/serde"]
nolibc = ["no-stack-protector"]
no-stack-protector = []

[[example]]
name = "pattern"
required-features = ["full-decoder"]

[[example]]
name = "simple"
required-features = ["formatter"]

[[example]]
name = "tokens"
required-features = ["formatter"]

[[example]]
name = "formatter_hooks"
required-features = ["formatter"]

[[example]]
name = "formatter_symbols"
required-features = ["formatter"]

[[example]]
name = "instruction_segments"
required-features = ["full-decoder"]

[[example]]
name = "encode_manually"
required-features = ["encoder", "formatter"]

[[example]]
name = "encode_macro"
required-features = ["encoder", "formatter"]

[[example]]
name = "decoded_to_encoder_req"
required-features = ["encoder"]
